@@ -10,6 +10,8 @@ typedef sequence<long>   long_sequence;
 typedef sequence<float>  float_sequence;
 typedef sequence<double> double_sequence;
 typedef sequence<string> string_sequence;
+typedef long long_array[5];
+typedef string string_array[5];
 
 struct Bar
 {
@@ -59,6 +61,9 @@ component Foo
   attribute string my_variable_string;
   attribute wstring<50> my_fixed_wstring;
   attribute wstring my_variable_wstring;
+
+  attribute long_array my_long_array;
+  attribute string_array my_string_array;
 
   attribute short_sequence  my_short_sequence;
   attribute long_sequence   my_long_sequence;
